# Aero-Inspect

./: .gitignore  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml
.github/: CODEOWNERS
alembic/: env.py
alembic/versions/: a6e70c459810_add_zone_id_and_inspection_type_to_.py  c324f3c33131_create_all_tables.py
artifacts/metrics/: evaluation_results.json
config/: config.yaml
data/corpus/faa_ads/: FAA_ADS_02-12634.xml  FAA_ADS_03-16693.xml  FAA_ADS_2012-6470.xml  FAA_ADS_2012-859.xml  FAA_ADS_2013-24034.xml  FAA_ADS_2014-04546.xml  FAA_ADS_2014-21019.xml  FAA_ADS_2014-27070.xml  FAA_ADS_2015-25709.xml  FAA_ADS_2015-26616.xml  FAA_ADS_2016-21410.xml  FAA_ADS_2017-08831.xml  FAA_ADS_2018-24389.xml  FAA_ADS_2018-26361.xml  FAA_ADS_2020-02719.xml  FAA_ADS_2026-08154.xml  FAA_ADS_2026-09535.xml
data/corpus/faa_sdrs/: FAA_SDRS_1990-11-26.html  FAA_SDRS_2003-10-21.html  FAA_SDRS_2013-02-14.html  FAA_SDRS_2017-02-01.html  FAA_SDRS_2021-11-18.html  FAA_SDRS_2022-02-24.html  FAA_SDRS_2022-10-03.html  FAA_SDRS_2024-06-13.html  FAA_SDRS_2024-10-03.html  FAA_SDRS_2025-10-21.html  FAA_SDRS_2025-12-10.html  FAA_SDRS_2026-01-12.html  FAA_SDRS_2026-05-05.html  FAA_SDRS_2026-05-11.html
data/datasets/: dataset.yaml
docker/: backend.Dockerfile
scripts/: build_vectorstore.py  evaluate_yolo.py  prepare_dataset.py  seed_users.py  seed_zones.py  smoke_test_agent.py  smoke_test_llm.py  smoke_test_loaders.py  train_yolo.py
src/: package-lock.json  package.json  tsconfig.json  vite.config.ts
src/backend/: main.py
src/backend/auth/: routes.py  service.py  tokens.py
src/backend/core/: exceptions.py  middleware.py  settings.py
src/backend/db/: session.py
src/backend/detection/: infer.py  postprocess.py  preprocess.py  routes.py  services.py  severity.py
src/backend/inspections/: repository.py  routes.py  service.py
src/backend/intelligence/: routes.py  service.py
src/backend/reports/: defect_report.py  routes.py  service.py  work_order.py
src/shared/: zone_definitions.json
src/web/: package-lock.json  package.json  routeTree.gen.ts  styles.css  tailwind.config.ts
(+38142 files in other folders)
