[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aero-inspect"
version = "1.0.0"
description = "Edge AI Aerospace Defect Detection System"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi",
    "uvicorn[standard]",

    # Database
    "sqlalchemy",
    "psycopg2-binary",
    "alembic",

    # Settings and config
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",

    # File handling
    "python-multipart",

    # Auth
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "PyJWT",

    # ML / Detection (Person 1)
    "ultralytics",
    "opencv-python",
    "pillow",
    "numpy",

    # AI / Agent (Person 2)
    "langgraph",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-ollama",
    "langchain-chroma",
    "langchain-text-splitters",
    "chromadb",
    "sentence-transformers",
    "reportlab",
    "lxml",
    "beautifulsoup4",
    "pymupdf",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]